--- a/AOS05/Cut.ipynb
+++ b/AOS05/Cut.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 16,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-11-19T18:30:38.975081700Z",
      "start_time": "2023-11-19T18:30:38.969250300Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "515.3095238095237"
+      "text/plain": [
+       "515.3095238095237"
+      ]
      },
-     "execution_count": 394,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,13 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 17,
+   "id": "417f83b5ef3374c8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:38.983838200Z",
+     "start_time": "2023-11-19T18:30:38.973081700Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "-515.3095238095237"
+      "text/plain": [
+       "array([0.5       , 0.5       , 0.33333333, 0.14285714])"
+      ]
      },
-     "execution_count": 395,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,26 +66,28 @@
     "dual_b = c\n",
     "dual_A = -A_ub.T\n",
     "res_dual = linprog(c=dual_c,A_ub=dual_A,b_ub=dual_b)\n",
-    "res_dual.fun"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:38.983838200Z",
-     "start_time": "2023-11-19T18:30:38.973081700Z"
-    }
-   },
-   "id": "417f83b5ef3374c8"
+    "res_dual.x"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 18,
+   "id": "d2c96bad0d21af78",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.014577700Z",
+     "start_time": "2023-11-19T18:30:38.980836700Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "(-1.2857142857142856, array([0., 2., 0., 2.]))"
+      "text/plain": [
+       "(-1.2857142857142856, array([0., 2., 0., 2.]))"
+      ]
      },
-     "execution_count": 396,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,25 +99,27 @@
     "b=np.array([100])\n",
     "res = linprog(c=pi,A_ub=A,b_ub=b,integrality=1)\n",
     "res.fun,res.x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.014577700Z",
-     "start_time": "2023-11-19T18:30:38.980836700Z"
-    }
-   },
-   "id": "d2c96bad0d21af78"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 19,
+   "id": "fbbbd8f0d536157b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.015050600Z",
+     "start_time": "2023-11-19T18:30:38.990545400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "485.16666666666663"
+      "text/plain": [
+       "485.16666666666663"
+      ]
      },
-     "execution_count": 397,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,63 +131,65 @@
     "b_ub = np.array([-97,-610,-395,-211])\n",
     "res = linprog(c=c,A_ub=A_ub,b_ub=b_ub)\n",
     "res.fun"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.015050600Z",
-     "start_time": "2023-11-19T18:30:38.990545400Z"
-    }
-   },
-   "id": "fbbbd8f0d536157b"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 20,
+   "id": "c03a743927054413",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.015050600Z",
+     "start_time": "2023-11-19T18:30:38.997506300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "dual_c = b_ub\n",
     "dual_b = c\n",
     "dual_A = -A_ub.T\n",
     "res_dual = linprog(c=dual_c,A_ub=dual_A,b_ub=dual_b)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.015050600Z",
-     "start_time": "2023-11-19T18:30:38.997506300Z"
-    }
-   },
-   "id": "c03a743927054413"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 21,
+   "id": "cad42d41ef7493d8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.015050600Z",
+     "start_time": "2023-11-19T18:30:39.003262Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "-485.16666666666663"
+      "text/plain": [
+       "-485.16666666666663"
+      ]
      },
-     "execution_count": 399,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res_dual.fun"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.015050600Z",
-     "start_time": "2023-11-19T18:30:39.003262Z"
-    }
-   },
-   "id": "cad42d41ef7493d8"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 22,
+   "id": "4e50755ac49f1c5f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.032143300Z",
+     "start_time": "2023-11-19T18:30:39.010577700Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "dual_coef = res_dual.x\n",
@@ -180,50 +198,54 @@
     "A=np.array([[45,36,31,14]])\n",
     "b=np.array([100])\n",
     "res = linprog(c=pi,A_ub=A,b_ub=b,integrality=1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.032143300Z",
-     "start_time": "2023-11-19T18:30:39.010577700Z"
-    }
-   },
-   "id": "4e50755ac49f1c5f"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 23,
+   "id": "a99026e541d0fe07",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.033142400Z",
+     "start_time": "2023-11-19T18:30:39.017558500Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "(-1.1666666666666665, array([0., 1., 2., 0.]))"
+      "text/plain": [
+       "(-1.1666666666666665, array([0., 1., 2., 0.]))"
+      ]
      },
-     "execution_count": 401,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res.fun,res.x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.033142400Z",
-     "start_time": "2023-11-19T18:30:39.017558500Z"
-    }
-   },
-   "id": "a99026e541d0fe07"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 24,
+   "id": "dcbb7b4709fd6d4f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.033142400Z",
+     "start_time": "2023-11-19T18:30:39.024607100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "452.25"
+      "text/plain": [
+       "452.25"
+      ]
      },
-     "execution_count": 402,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,25 +257,27 @@
     "b_ub = np.array([-97,-610,-395,-211])\n",
     "res = linprog(c=c,A_ub=A_ub,b_ub=b_ub)\n",
     "res.fun"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.033142400Z",
-     "start_time": "2023-11-19T18:30:39.024607100Z"
-    }
-   },
-   "id": "dcbb7b4709fd6d4f"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 25,
+   "id": "ce9a3db033f35771",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.063271200Z",
+     "start_time": "2023-11-19T18:30:39.032143300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.5 ,  0.5 ,  0.25, -0.  ])"
+      "text/plain": [
+       "array([ 0.5 ,  0.5 ,  0.25, -0.  ])"
+      ]
      },
-     "execution_count": 403,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,25 +288,27 @@
     "dual_A = -A_ub.T\n",
     "res_dual = linprog(c=dual_c,A_ub=dual_A,b_ub=dual_b)\n",
     "res_dual.x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.063271200Z",
-     "start_time": "2023-11-19T18:30:39.032143300Z"
-    }
-   },
-   "id": "ce9a3db033f35771"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 26,
+   "id": "f3fb301326319328",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-19T18:30:39.102282200Z",
+     "start_time": "2023-11-19T18:30:39.041844100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "(-1.0, array([0., 2., 0., 0.]))"
+      "text/plain": [
+       "(-1.0, array([0., 2., 0., 0.]))"
+      ]
      },
-     "execution_count": 404,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,15 +321,7 @@
     "b=np.array([100])\n",
     "res = linprog(c=c,A_ub=A,b_ub=b,integrality=1)\n",
     "res.fun,res.x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-19T18:30:39.102282200Z",
-     "start_time": "2023-11-19T18:30:39.041844100Z"
-    }
-   },
-   "id": "f3fb301326319328"
+   ]
   }
  ],
  "metadata": {
@@ -315,14 +333,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
